--- a/index.html
+++ b/index.html
@@ -23,81 +23,104 @@
 		</header>
 		<br><br>
 		<div class="card">
-			<div class="container" style="text-align:center">
-				<h2>History of Somalia</h2>
+			<div id="container0">
+				<h2>Background</h2>
 				<br>
-				<div>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada
-					in,
-					consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
-					tristique mi,
-					vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac
-					tincidunt
-					lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit
-					quam
-					varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
-					elementum diam
-					elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
-					vestibulum. Quisque
-					quam augue, varius vitae felis et, tristique malesuada nunc.
-				</div>
-				<br>
-			</div>
-		</div>
-		<br><br>
-		<div class="card">
-			<div class="container">
-				<h2>Visualisation 1</h2>
-				<div>
-					<p id="chart1"></p>
-					<button class="year-btn" data-year="2017">2017</button>
-					<button class="year-btn" data-year="2018">2018</button>
-					<button class="year-btn" data-year="2019">2019</button>
-					<button class="year-btn" data-year="2020">2020</button>
-					<button class="year-btn" data-year="2021">2021</button>
-					<button class="year-btn" data-year="2022">2022</button>
+				<div class="background">
+					Food insecurity-driven migration in Somalia refers to the phenomenon where individuals or
+					communities are compelled to migrate due to the lack of access to sufficient and nutritious
+					food. Somalia, located in the Horn of Africa, has been plagued by recurring droughts, floods,
+					conflict, and political instability, leading to severe food insecurity in the region.
 					<br><br>
-					<!-- <div class="regionLabel"><div>Current filtering by: <strong>All Regions</strong></div><a href="#" class="reset-btn small">RESET</a></div> -->
-				<div id="chart1"></div>
-					<span class="text1">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
-						malesuada in,
-						consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
-						tristique mi,
-						vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris,
-						ac tincidunt
-						lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam
-						blandit quam
-						varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
-						elementum diam
-						elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
-						vestibulum. Quisque
-						quam augue, varius vitae felis et, tristique malesuada nunc.
-					</span>
+					Several factors contribute to food insecurity in Somalia, including frequent droughts that
+					devastate agricultural production, limited access to water resources, high levels of poverty,
+					inadequate infrastructure, and ongoing conflicts. These challenges have resulted in chronic
+					malnutrition and food shortages, pushing many Somalis to leave their homes in search of better
+					opportunities and resources.
+					<br><br>
+					Food insecurity-driven migration manifests in various forms. Internally displaced persons (IDPs)
+					often flee rural areas affected by drought and conflict and seek refuge in urban centers or makeshift
+					camps. Additionally, some individuals undertake perilous journeys across borders in search of more
+					stable environments and access to food and livelihood opportunities.
+				</div>
+				<br>
+			</div>
+		</div>
+		<br><br>
+		<div class="card">
+			<div id="container1">
+				<h2>IPC Scale of Somalia Regions (2017 - 2022)</h2>
+				<div>
+					<p id="buttons">
+	            <button onclick="myFunction()" id='button1'>2017</button>
+	            <button onclick="myFunction2()" id='button2'>2018</button>
+							<button onclick="myFunction3()" id='button3'>2019</button>
+	            <button onclick="myFunction4()" id='button4'>2020</button>
+							<button onclick="myFunction5()" id='button5'>2021</button>
+	            <button onclick="myFunction6()" id='button6'>2022</button>
+	            <script src="button.js"></script>
+	        </p>
+					<div id="chart1"></div>
+					<div class="text1">
+						The choropleth map illustrates the levels of food insecurity and acute malnutrition in Somalia
+						regions from 2017 to 2022, based on the IPC scale. The IPC scale classifies regions into different
+						phases, ranging from Minimal (Phase 1) to Famine (Phase 5), indicating the severity of food insecurity
+						and the corresponding humanitarian response required.
+						<br><br>
+						The map highlights variations in food security across different regions during this period. Regions
+						classified under Phase 1 experience minimal food insecurity, while regions in Phase 2 face stressed
+						conditions with some populations needing assistance. Phase 3 represents crisis levels of food
+						insecurity, Phase 4 indicates emergency conditions, and Phase 5 represents famine with severe acute
+						malnutrition and excess mortality.
+						<br><br>
+						The color gradient on the map signifies the different phases of the IPC scale, with darker shades
+						representing higher levels of food insecurity. The legend accompanying the map provides a visual key
+						to interpret the colors and understand the severity levels.
+						<br><br>
+						It is important to note that the data used for this map is based on the IPC scale, which is regularly
+						updated to reflect the changing food security situation. Therefore, the map provides a snapshot of
+						food insecurity and acute malnutrition in Somalia regions from 2017 to 2022, but ongoing monitoring
+						and assessment are necessary to understand the current situation.
+						<br><br>
+						<i>Sources:<br>
+							<a class="hyperlinks" href='http://www.ipcinfo.org/'>IPC Global Partners - Integrated Food Security Phase Classification</a>
+							<br>
+							<a class="hyperlinks" href='https://fsnau.org/'>Food Security and Nutrition Analysis Unit - Somalia</a>
+						</i>
+					</div>
 				</div>
 			</div>
 		</div>
 		<br><br>
 		<div class="card">
-			<div class="container">
-				<h2>Visualisation 2</h2>
+			<div id="container2">
+				<h2>Total Acute Food Insecurity in Somalia Regions (2015 - 2023)</h2>
 				<div>
-					<p id="chart2"></p>
-					<span class="text2">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
-						malesuada in,
-						consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur.
-						Sed et tristique mi,
-						vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt
-						mauris, ac tincidunt
-						lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in.
-						Nam blandit quam
-						varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus,
-						nec elementum diam
-						elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus
-						id vestibulum. Quisque
-						quam augue, varius vitae felis et, tristique malesuada nunc.
-					</span>
+					<div id="chart2"></div>
+					<div class="text2">
+						The area chart presents the cumulative number of people affected by acute food insecurity in
+						Somalia for rural, urban, and IDP regions from 2015 to 2023. This chart offers a comprehensive
+						view of the total population impacted by food insecurity, highlighting the trends and dynamics
+						over time.
+						<br><br>
+						The x-axis represents the years from 2015 to 2023, providing a temporal perspective on the
+						evolution of food insecurity. The y-axis represents the cumulative number of people affected
+						by acute food insecurity, showcasing the total count of individuals in the specified regions.
+						<br><br>
+						The area chart is divided into three distinct areas, each representing a specific region category.
+						The rural area depicts the number of people affected in rural regions, while the urban area
+						represents the impact on urban populations. The IDP area displays the cumulative count of
+						individuals affected in internally displaced persons camps or settlements.
+						<br><br>
+						The color coding of the areas enables easy differentiation and comparison between the three
+						region categories. By observing the chart, it is possible to identify the relative magnitudes
+						and fluctuations in the number of people affected by acute food insecurity across different
+						regions and over time.
+						<br><br>
+						<i>Source:<br>
+							<a class="hyperlinks" href='https://fsnau.org/'>Food Security and Nutrition Analysis Unit - Somalia</a>
+						</i>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -154,9 +177,9 @@
 	<br><br>
 
 	<div class="card">
-		<div class="container" style="text-align:center">
+		<div id="container4">
 			<h2>Conclusion</h2>
-			<span>
+			<div class="text4">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
 				malesuada in,
 				consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
@@ -170,7 +193,7 @@
 				elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
 				vestibulum. Quisque
 				quam augue, varius vitae felis et, tristique malesuada nunc.
-			</span>
+			</div>
 		</div>
 	</div>
 
