--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 				<h2>IPC Scale of Somalia Regions (2017 - 2022)</h2>
 				<div>
 					<p id="buttons">
-	            <button onclick="myFunction()" id='button1'>2017</button>
-	            <button onclick="myFunction2()" id='button2'>2018</button>
-							<button onclick="myFunction3()" id='button3'>2019</button>
-	            <button onclick="myFunction4()" id='button4'>2020</button>
-							<button onclick="myFunction5()" id='button5'>2021</button>
-	            <button onclick="myFunction6()" id='button6'>2022</button>
-	            <script src="button.js"></script>
+	            <button id='button1'>2017</button>
+	            <button id='button2'>2018</button>
+							<button id='button3'>2019</button>
+	            <button id='button4'>2020</button>
+							<button id='button5'>2021</button>
+	            <button id='button6'>2022</button>
 	        </p>
+					<br>
 					<div id="chart1"></div>
 					<div class="text1">
 						The choropleth map illustrates the levels of food insecurity and acute malnutrition in Somalia
