delete conclusion - adjust text in vis 2 & vis 3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div>
 		<header>
-				<h1>Food Insecurity-Driven Migration in Somalia</h1>
+			<h1>Food Insecurity-Driven Migration in Somalia</h1>
 		</header>
 		<br><br>
 		<div class="card">
@@ -39,7 +39,8 @@
 					opportunities and resources.
 					<br><br>
 					Food insecurity-driven migration manifests in various forms. Internally displaced persons (IDPs)
-					often flee rural areas affected by drought and conflict and seek refuge in urban centers or makeshift
+					often flee rural areas affected by drought and conflict and seek refuge in urban centers or
+					makeshift
 					camps. Additionally, some individuals undertake perilous journeys across borders in search of more
 					stable environments and access to food and livelihood opportunities.
 				</div>
@@ -52,40 +53,52 @@
 				<h2>IPC Scale of Somalia Regions (2017 - 2022)</h2>
 				<div>
 					<p id="buttons">
-	            <button id='button1'>2017</button>
-	            <button id='button2'>2018</button>
-							<button id='button3'>2019</button>
-	            <button id='button4'>2020</button>
-							<button id='button5'>2021</button>
-	            <button id='button6'>2022</button>
-	        </p>
+						<button id='button1'>2017</button>
+						<button id='button2'>2018</button>
+						<button id='button3'>2019</button>
+						<button id='button4'>2020</button>
+						<button id='button5'>2021</button>
+						<button id='button6'>2022</button>
+					</p>
 					<br>
 					<div id="chart1"></div>
 					<div class="text1">
 						The choropleth map illustrates the levels of food insecurity and acute malnutrition in Somalia
-						regions from 2017 to 2022, based on the IPC scale. The IPC scale classifies regions into different
-						phases, ranging from Minimal (Phase 1) to Famine (Phase 5), indicating the severity of food insecurity
+						regions from 2017 to 2022, based on the IPC scale. The IPC scale classifies regions into
+						different
+						phases, ranging from Minimal (Phase 1) to Famine (Phase 5), indicating the severity of food
+						insecurity
 						and the corresponding humanitarian response required.
 						<br><br>
-						The map highlights variations in food security across different regions during this period. Regions
-						classified under Phase 1 experience minimal food insecurity, while regions in Phase 2 face stressed
+						The map highlights variations in food security across different regions during this period.
+						Regions
+						classified under Phase 1 experience minimal food insecurity, while regions in Phase 2 face
+						stressed
 						conditions with some populations needing assistance. Phase 3 represents crisis levels of food
-						insecurity, Phase 4 indicates emergency conditions, and Phase 5 represents famine with severe acute
+						insecurity, Phase 4 indicates emergency conditions, and Phase 5 represents famine with severe
+						acute
 						malnutrition and excess mortality.
 						<br><br>
-						The color gradient on the map signifies the different phases of the IPC scale, with darker shades
-						representing higher levels of food insecurity. The legend accompanying the map provides a visual key
+						The color gradient on the map signifies the different phases of the IPC scale, with darker
+						shades
+						representing higher levels of food insecurity. The legend accompanying the map provides a visual
+						key
 						to interpret the colors and understand the severity levels.
 						<br><br>
-						It is important to note that the data used for this map is based on the IPC scale, which is regularly
-						updated to reflect the changing food security situation. Therefore, the map provides a snapshot of
-						food insecurity and acute malnutrition in Somalia regions from 2017 to 2022, but ongoing monitoring
+						It is important to note that the data used for this map is based on the IPC scale, which is
+						regularly
+						updated to reflect the changing food security situation. Therefore, the map provides a snapshot
+						of
+						food insecurity and acute malnutrition in Somalia regions from 2017 to 2022, but ongoing
+						monitoring
 						and assessment are necessary to understand the current situation.
 						<br><br>
 						<i>Sources:<br>
-							<a class="hyperlinks" href='http://www.ipcinfo.org/'>IPC Global Partners - Integrated Food Security Phase Classification</a>
+							<a class="hyperlinks" href='http://www.ipcinfo.org/'>IPC Global Partners - Integrated Food
+								Security Phase Classification</a>
 							<br>
-							<a class="hyperlinks" href='https://fsnau.org/'>Food Security and Nutrition Analysis Unit - Somalia</a>
+							<a class="hyperlinks" href='https://fsnau.org/'>Food Security and Nutrition Analysis Unit -
+								Somalia</a>
 						</i>
 					</div>
 				</div>
@@ -93,40 +106,39 @@
 		</div>
 		<br><br>
 		<div class="card">
+			<h2>Total Acute Food Insecurity in Somalia Regions (2015 - 2023)</h2>
 			<div id="container2">
-				<h2>Total Acute Food Insecurity in Somalia Regions (2015 - 2023)</h2>
-				<div>
-					<div id="chart2"></div>
-					<div class="text2">
-						The area chart presents the cumulative number of people affected by acute food insecurity in
-						Somalia for rural, urban, and IDP regions from 2015 to 2023. This chart offers a comprehensive
-						view of the total population impacted by food insecurity, highlighting the trends and dynamics
-						over time.
-						<br><br>
-						The x-axis represents the years from 2015 to 2023, providing a temporal perspective on the
-						evolution of food insecurity. The y-axis represents the cumulative number of people affected
-						by acute food insecurity, showcasing the total count of individuals in the specified regions.
-						<br><br>
-						The area chart is divided into three distinct areas, each representing a specific region category.
-						The rural area depicts the number of people affected in rural regions, while the urban area
-						represents the impact on urban populations. The IDP area displays the cumulative count of
-						individuals affected in internally displaced persons camps or settlements.
-						<br><br>
-						The color coding of the areas enables easy differentiation and comparison between the three
-						region categories. By observing the chart, it is possible to identify the relative magnitudes
-						and fluctuations in the number of people affected by acute food insecurity across different
-						regions and over time.
-						<br><br>
-						<i>Source:<br>
-							<a class="hyperlinks" href='https://fsnau.org/'>Food Security and Nutrition Analysis Unit - Somalia</a>
-						</i>
-					</div>
+				<div class="text2">
+					The area chart presents the cumulative number of people affected by acute food insecurity in
+					Somalia for rural, urban, and IDP regions from 2015 to 2023. This chart offers a comprehensive
+					view of the total population impacted by food insecurity, highlighting the trends and dynamics
+					over time.
+					<br><br>
+					The x-axis represents the years from 2015 to 2023, providing a temporal perspective on the
+					evolution of food insecurity. The y-axis represents the cumulative number of people affected
+					by acute food insecurity, showcasing the total count of individuals in the specified regions.
+					<br><br>
+					The area chart is divided into three distinct areas, each representing a specific region category.
+					The rural area depicts the number of people affected in rural regions, while the urban area
+					represents the impact on urban populations. The IDP area displays the cumulative count of
+					individuals affected in internally displaced persons camps or settlements.
+					<br><br>
+					The color coding of the areas enables easy differentiation and comparison between the three
+					region categories. By observing the chart, it is possible to identify the relative magnitudes
+					and fluctuations in the number of people affected by acute food insecurity across different
+					regions and over time.
+					<br><br>
+					<i>Source:<br>
+						<a class="hyperlinks" href='https://fsnau.org/'>Food Security and Nutrition Analysis Unit -
+							Somalia</a>
+					</i>
 				</div>
+				<div id="chart2"></div>
 			</div>
 		</div>
 		<br><br>
 		<div class="card">
-			<h2>Visualisation 3</h2>
+			<h2>Annually and quarterly CPI changes in Somalia</h2>
 			<div id="container3">
 				<div id="chart3"></div>
 				<div class="text3">
@@ -169,33 +181,16 @@
 						their overall standard of living. Conversely, individuals may be attracted to countries with
 						lower inflation rates or better economic conditions, where they perceive an improvement in their
 						living standards.
+						<br><br>
+						<i>Source:<br>
+							<a class="hyperlinks" href='https://data.humdata.org/dataset/faostat-prices-for-somalia'>Somalia - Prices</a>
+						</i>
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 	<br><br>
-
-	<div class="card">
-		<div id="container4">
-			<h2>Conclusion</h2>
-			<div class="text4">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
-				malesuada in,
-				consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
-				tristique mi,
-				vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris,
-				ac tincidunt
-				lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam
-				blandit quam
-				varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
-				elementum diam
-				elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
-				vestibulum. Quisque
-				quam augue, varius vitae felis et, tristique malesuada nunc.
-			</div>
-		</div>
-	</div>
 
 	</div>
 	<footer style="text-align:center">
