--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		</header>
 		<br><br>
 		<div class="card">
+			<br>
+			<h2>Background</h2>
 			<div id="container0">
-				<h2>Background</h2>
-				<br>
 				<div class="background">
 					Food insecurity-driven migration in Somalia refers to the phenomenon where individuals or
 					communities are compelled to migrate due to the lack of access to sufficient and nutritious
@@ -49,8 +49,9 @@
 		</div>
 		<br><br>
 		<div class="card">
+			<br>
+			<h2>IPC Scale of Somalia Regions (2017 - 2022)</h2>
 			<div id="container1">
-				<h2>IPC Scale of Somalia Regions (2017 - 2022)</h2>
 				<div>
 					<p id="buttons">
 						<button id='button1'>2017</button>
@@ -106,6 +107,7 @@
 		</div>
 		<br><br>
 		<div class="card">
+			<br>
 			<h2>Total Acute Food Insecurity in Somalia Regions (2015 - 2023)</h2>
 			<div id="container2">
 				<div class="text2">
@@ -138,7 +140,8 @@
 		</div>
 		<br><br>
 		<div class="card">
-			<h2>Annually and quarterly CPI changes in Somalia</h2>
+			<br>
+			<h2>Annually and Quarterly CPI changes in Somalia</h2>
 			<div id="container3">
 				<div id="chart3"></div>
 				<div class="text3">
