--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		<br><br>
 		<div class="card">
 			<br>
-			<h2>Annually and Quarterly CPI changes in Somalia</h2>
+			<h2>Annually and Quarterly Consumer Price Food Indices changes in Somalia</h2>
 			<div id="container3">
 				<div id="chart3"></div>
 				<div class="text3">
@@ -162,31 +162,31 @@
 						years.
 						<br>
 						<br>
-						Cost of Living: As the CPI increases, the cost of living also rises. This implies that
-						individuals and households need to allocate more financial resources to sustain their standard
-						of living. With higher prices for essential goods and services, such as food, housing, and
-						healthcare, it becomes more challenging for people to afford these necessities. Consequently,
-						economic hardships may arise, and individuals might contemplate migration as a means to seek
-						better economic opportunities or a lower cost of living elsewhere.
+						Cost of Living: The expense of living likewise grows when the CPI does. This suggests that in
+						order to maintain their quality of life, people and families must allocate more money. It gets
+						harder for individuals to afford these essentials as the cost of basic products and services
+						like food, housing, and healthcare rises. As a result, people may have financial difficulties
+						and consider moving in search of better job possibilities or reduced living expenses.
 						<br>
 						<br>
-						Economic Conditions: Inflationary pressures, as reflected by rising CPI values, often signify
-						economic instability. High inflation can erode individuals' purchasing power, reducing their
-						ability to make ends meet and potentially leading to a decline in savings. When economic
-						conditions deteriorate due to inflation, unemployment, or limited job opportunities, individuals
-						may feel compelled to migrate in search of better employment prospects and greater economic
-						stability.
+						Economic Conditions: Economic instability is frequently an indicator of inflationary pressures,
+						as indicated by rising CPI numbers. High inflation can reduce people's purchasing power, making
+						it harder for them to get by and perhaps decreasing their savings. Whenever finances
+						situations worsen as a result of inflation, unemployment, or a lack of work chances, people may
+						feel forced to move in pursuit of better employment options and more stable economic conditions.
+
 						<br>
 						<br>
-						Push and Pull Factors: Changes in CPI can act as both push and pull factors for migration.
-						Higher inflation and an increasing cost of living can push individuals away from their home
-						country, particularly if they struggle to afford basic necessities and experience a decline in
-						their overall standard of living. Conversely, individuals may be attracted to countries with
-						lower inflation rates or better economic conditions, where they perceive an improvement in their
-						living standards.
+						Push and Pull Factors: Changes in the CPI can influence migration in both a push and a pull
+						way. People may leave their native country due to higher inflation and rising living expenses,
+						especially if they find it difficult to pay for essentials and see a drop in their general level
+						of living. On the other hand, people could be drawn to nations with lower inflation rates or
+						better economic conditions because they believe that their quality of living has improved there.
+
 						<br><br>
 						<i>Source:<br>
-							<a class="hyperlinks" href='https://data.humdata.org/dataset/faostat-prices-for-somalia'>Somalia - Prices</a>
+							<a class="hyperlinks"
+								href='https://data.humdata.org/dataset/faostat-prices-for-somalia'>Somalia - Prices</a>
 						</i>
 					</p>
 				</div>
